--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,13 @@
 							<phase>compile</phase>
 						</execution>
 					</executions>
+					<dependencies>
+					<dependency>
+						<groupId>com.puppycrawl.tools</groupId>
+						<artifactId>checkstyle</artifactId>
+						<version>10.3</version>
+					</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>com.github.spotbugs</groupId>
@@ -203,6 +210,10 @@
 			<id>check</id>
 			<build>
 				<plugins>
+					<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-checkstyle-plugin</artifactId>
+					</plugin>
 					<plugin>
 						<groupId>com.github.spotbugs</groupId>
 						<artifactId>spotbugs-maven-plugin</artifactId>
