--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,11 +8,14 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-spring.config.activate.on-profile=ci,test
-
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:8080/my_database
-spring.datasource.username=my_user
+spring.jpa.database=postgresql
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareIt
+spring.datasource.username=egor
 spring.datasource.password=my_password
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.config.activate.on-profile=ci,test
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:shareIt
+spring.datasource.username=test
+spring.datasource.password=test
