--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -15,5 +15,5 @@ spring.jpa.database=postgresql
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareIt
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=user
+spring.datasource.password=pass
