--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+server.port=9090
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.properties.hibernate.format_sql=true
@@ -15,5 +17,5 @@ spring.jpa.database=postgresql
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareIt
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=user
+spring.datasource.password=pass
