--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -19,7 +19,7 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
 spring.datasource.username=user
-spring.datasource.password=mypassword
+spring.datasource.password=pass
 #---
 
 spring.config.activate.on-profile=ci,test
